# misc

./: .gitignore  99-bottles.sql  CookieEnterKeyPresser.py  LICENSE  README.md  Stackulator.fs  StringGroup.hs  aidans_bad_code.py  alexandergriffing_spite.py  arbtt_wayland_toplevel.py  arithmetic_coder.py  art2.py  art3.py  audio-modem.html  autocrafter.py  autoformat.py  bcc.py  beep.py  bigram.py  block_scope.py  bmp280_prometheus.py  captive_portal.py  clipstack.py  collatzz3.py  compare_things.py  config.ts  cool-effect.glsl  count_words_in_directory.py  cycdec.py  cyclcm.py  db.ts  diacriticize.py  dilemma2.scm  discord-message-dump-thing.py  emoji_ternarize.py  eso-interpreter.py  extract_nouns.py  fractalart.html  fractalize_image.py  generate-tape-image-1.py  (+59 more)
KerbalName/: build.fsx  build.sh  paket.dependencies
accursed-autoregex/: allstrings.py  autoregex.py
arbitrary-politics-graphs/: test.html
binary-html/: Cargo.toml  README.md  serde.rs
calibre-indexer/: Cargo.toml  qxml.rs
calibre-indexer/src/: main.rs  run-query.py
code-guessing/: a2.c  anagram.c  anagram.py  atw.py  automaton.py  bad-factorio.html  base32-ts.py  base32.py  bpe-trainer.py  c_matrix_test.c  codexsoln.py  codexsoln2.py  compr.json  compressor-test.py  fib.c  fib.py  fibinput.c  fiborig.c  freqs.json  gif.s  giftest.html  hidden.py  img.js  json_submission.py  list-sort.py  matrix-ts.py  maze.py  maze2.py  multiply_matrices.py  quantizer.py  t.py  test12.py  test7.py  thingy.py  tictac.html  (+1 more)
fractalart-rs/: .gitignore  Cargo.toml  README.md
fractalart-rs/src/: main.rs
(+182 files in other folders)
