[package]
name = "calibre-indexer"
version = "0.1.0"
authors = ["osmarks <osmarks@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.24"
anyhow = "1"
num_cpus = "1"
epub = "1"
xml-rs = "0.8" # TODO: faster XML parser
lazy_static = "1"